FrostWire 2.8.2 build 740 NOC/26/20245
 - yt_dlp-2024.11.18
 - Python runtime upgraded from 3.8 to 3.11
 - androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.7

FrostWire 2.8.1 build 739 OCT/27/2024
 - yt_dlp-2024.10.22
 - Update Chaquopy plugin to 16.0.0
 - crash: Fix IllegalStateException by making DrawerLayout the root view in activity_main.xml
 - dev: com.google.firebase:firebase-bom:33.5.1
 - dev: com.android.tools.build:gradle:8.7.1

FrostWire 2.8.0 build 738 OCT/18/2024
 - New: Dark Mode Theme
 - Removed Google Playstore Billing integration and libraries
 - yt_dlp-2024.10.07
 - androidx.core:core:1.13.1
 - com.android.tools.build:gradle:8.7.0
 - androidx.appcompat:appcompat:1.7.0
 - androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.6
 - com.google.firebase:firebase-bom:33.4.0


FrostWire 2.7.9 build 736 AUG/24/2024
 - Enhanced SSL/TLS validation with improved domain and certificate handling in Ssl.java
 - Added "frostwire.com" to the list of valid SSL certificate domains
 - Implemented dynamic validation for subdomains
 - Updated NullTrustManager to manage and log SSL certificates more effectively
 - Simplified item access methods in TellurideSearchResultDownloadDialog
 - Removed unnecessary casting to improve code readability and efficiency
 - Corrected iswindows function in common.sh for proper integer comparison
 - Updated function’s usage in configure_update.sh for correct return status handling
 - Adjusted YTSearchPerformer for more memory-efficient handling of search results
 - Improved placement of FrostClick search within the Android UI
 - Fixed potential NullPointerException in TellurideSearchResultDownloadDialog
 - Fix potential NullPointerException in SearchFragment by ensuring valid FragmentManager
 - Fix ClassCastException in TellurideCourierCallback by adding type check for adapter instance
 - Enhanced URL opening method to handle cases where no default browser is found
 - Updated Gradle wrapper to use version 8.9
 - yt_dlp 2024.08.06