@@ -42,18 +42,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-    <com.frostwire.android.gui.views.RichNotification
-            android:id="@+id/fragment_search_rating_reminder_notification"
-            frostwire:rich_notification_icon="@drawable/rate_app_notification"
-            frostwire:rich_notification_title="@string/rate_our_app"
-            frostwire:rich_notification_title_underlined="true"
-            frostwire:rich_notification_description="@string/rating_reminder_description"
-            frostwire:rich_notification_number_of_action_links="2"
-            frostwire:rich_notification_action_links_horizontal_margin="25"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="gone"/>
-
     <com.frostwire.android.gui.views.SwipeLayout
             android:id="@+id/fragment_search_swipe"
             android:layout_width="match_parent"
