@@ -19,10 +19,7 @@ package com.frostwire.android.core;
 
 import android.os.Environment;
 
-import androidx.appcompat.app.AppCompatDelegate;
-
 import com.andrew.apollo.MusicPlaybackService;
-import com.frostwire.android.BuildConfig;
 import com.frostwire.util.Hex;
 
 import java.util.Collections;
@@ -61,7 +58,6 @@ final class ConfigurationDefaults {
         defaultValues.put(Constants.PREF_KEY_GUI_VIBRATE_ON_FINISHED_DOWNLOAD, true);
         defaultValues.put(Constants.PREF_KEY_GUI_LAST_MEDIA_TYPE_FILTER, (int) Constants.FILE_TYPE_TORRENTS);
         defaultValues.put(Constants.PREF_KEY_GUI_TOS_ACCEPTED, false);
-        defaultValues.put(Constants.PREF_KEY_GUI_ALREADY_RATED_US_IN_MARKET, false);
         defaultValues.put(Constants.PREF_KEY_GUI_FINISHED_DOWNLOADS_BETWEEN_RATINGS_REMINDER, 10);
         defaultValues.put(Constants.PREF_KEY_GUI_INITIAL_SETTINGS_COMPLETE, false);
         defaultValues.put(Constants.PREF_KEY_GUI_ENABLE_PERMANENT_STATUS_NOTIFICATION, true);
